--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -33,6 +33,7 @@
     "com.unity.xr.management": "4.5.3",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
+    "com.unity.modules.amd": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
